Cambio en nombre de Proyecto a CountryApp. Funciona bien, devuelve la lista de todos los países y sus continentes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "usm.pato.starwars"
+        applicationId "usm.pato.countryapp"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
